<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="action_change_units">Change Units</string>
    <string name="symbol_search">Symbol Search</string>
    <string name="content_test">Search for a Stock Symbol</string>
    <string name="input_hint">FB</string>
    <string name="input_prefill"></string>
    <string name="network_toast">Uh-oh! This app requires an internet connection</string>
    <string name="stock_saved_toast">This stock is already saved!</string>

    <string name="details_title">%1$s Details</string>

    <string name="invalid_stock">\"%1$s\" is not a valid stock symbol.</string>

    <string name="up">up</string>
    <string name="down">down</string>
    <string name="points">points</string>
    <string name="cd_list_item">%1$s is %2$s %3$s and is currently trading at %4$s</string>

    <string name="days_range" translatable="false">DaysRange</string>
    <string name="open_price" translatable="false">Open</string>
    <string name="previous_close" translatable="false">PreviousClose</string>
    <string name="year_range" translatable="false">YearRange</string>

    <string name="default_data_time_label">Previous 30 Days</string>
    <string name="days_range_label">Day Range:</string>
    <string name="year_range_label">Year Range:</string>
    <string name="open_label">Open:</string>
    <string name="previous_close_label">Previous Close:</string>

    <string name="empty_text">No data currently available.</string>

    <string name="cd_fab">Add a new stock</string>
</resources>
